tomcat uses sh for its script and not bash
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1371660 13f79535-47bb-0310-9956-ffa450edef68